--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,6 @@
 
 body {
   font-size: 13px;
-  font-family: "Courier New", Courier, monospace;
-  overflow-x: hidden;
+  overflow-x: hidden !important;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
